- ability system was developed further - fixed subclasses - added some dnd ability score things